--- a/src/dashboard/store.html
+++ b/src/dashboard/store.html
@@ -75,7 +75,7 @@
           <div class="mb-4">
             <label class="block text-gray-700 mb-2">Gambar Produk</label>
             <div class="border-2 border-dashed border-gray-300 rounded-lg p-4 text-center">
-              <img src="https://via.placeholder.com/150" alt="Current Product" class="mx-auto mb-2 h-20 object-cover">
+              <img src="../../image/piano.jpg" alt="Current Product" class="mx-auto mb-2 h-20 object-cover">
               <p class="text-gray-500">Drag & drop gambar baru atau klik untuk memilih</p>
               <input type="file" class="hidden" id="editProductImage">
               <button type="button" onclick="document.getElementById('editProductImage').click()" class="mt-2 bg-gray-100 hover:bg-gray-200 px-4 py-2 rounded-lg text-sm">
@@ -164,13 +164,6 @@
             </li>
             <li>
               <a
-                href="transactions.html"
-                class="flex items-center p-3 hover:text-amber-400"
-                ><i class="bx bxs-credit-card mr-2"></i>Transactions</a
-              >
-            </li>
-            <li>
-              <a
                 href="users.html"
                 class="flex items-center p-3 hover:text-amber-400"
                 ><i class="bx bxs-user mr-2"></i>Users</a
@@ -222,7 +215,7 @@
         <main class="p-6">
           <div class="flex justify-between items-center mb-6">
             <div>
-              <h1 class="text-2xl font-bold">My Store</h1>
+              <h1 class="text-2xl font-bold">Manajemen Produk</h1>
               <div class="text-sm text-gray-500">
                 Dashboard > <span class="text-amber-400">Store</span>
               </div>
