--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Panel Admin Tailwind</title>
+    <title>Panel Admin</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
@@ -56,7 +56,7 @@
             </li>
           </ul>
           <div class="mt-10 border-t pt-4">
-            <a href="#" class="flex items-center text-red-600 p-3">
+            <a href="../sign-in.html" class="flex items-center text-red-600 p-3">
               <i class="bx bxs-log-out-circle mr-2"></i> Logout
             </a>
           </div>
