--- a/src/dashboard/store.html
+++ b/src/dashboard/store.html
@@ -171,7 +171,7 @@
             </li>
           </ul>
           <div class="mt-10 border-t pt-4">
-            <a href="#" class="flex items-center p-3 text-red-600"
+            <a href="../sign-in.html" class="flex items-center p-3 text-red-600"
               ><i class="bx bxs-log-out-circle mr-2"></i>Logout</a
             >
           </div>
