--- a/src/status.html
+++ b/src/status.html
@@ -147,13 +147,13 @@
         <!-- Product 2 -->
         <div class="flex items-start justify-between border-b pb-4">
           <div class="flex items-start">
-            <img src="../image/drum.jpg" alt="Drum" class="w-16 h-16 object-cover rounded mr-4" />
+            <img src="../image/gitar2.jpg" alt="gitar" class="w-16 h-16 object-cover rounded mr-4" />
             <div>
-              <h3 class="font-semibold">Drum Set Pearl Export</h3>
-              <p class="text-gray-500 text-sm">1 x Rp3.000.000</p>
+              <h3 class="font-semibold">Gitar Akustik</h3>
+              <p class="text-gray-500 text-sm">1 x Rp1.500.000</p>
             </div>
           </div>
-          <p class="font-bold">Rp3.000.000</p>
+          <p class="font-bold">Rp1.500.000</p>
         </div>
       </div>
 
@@ -161,11 +161,11 @@
       <div class="mt-6 space-y-3">
         <div class="flex justify-between">
           <span class="text-gray-600">Subtotal</span>
-          <span>Rp4.500.000</span>
+          <span>Rp3.000.000</span>
         </div>
         <div class="flex justify-between font-bold text-lg mt-4">
           <span>Total Pembayaran</span>
-          <span class="text-amber-400">Rp4.500.000</span>
+          <span class="text-amber-400">Rp3.000.000</span>
         </div>
       </div>
 
